--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -5960,9 +5960,10 @@ html, body {
 /* line 73, ../sass/app.scss */
 body {
   background-image: url("../images/pattern.svg");
+  background-size: 98px 123px;
 }
 
-/* line 78, ../sass/app.scss */
+/* line 79, ../sass/app.scss */
 h1#coming-soon-logo {
   margin-top: 100px;
   background-image: url("../images/logo-vertical.svg");
