--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -5963,12 +5963,17 @@ body {
   background-size: 98px 123px;
 }
 
-/* line 79, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
+.top-page {
+  padding-top: 100px;
+}
+
+/* line 80, ../sass/app.scss */
 h1#coming-soon-logo {
-  margin-top: 100px;
   background-image: url("../images/logo-vertical.svg");
   background-size: 400px 400px;
   background-position: center center;
+  background-repeat: no-repeat;
   display: block;
   height: 300px;
 }
