--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'ClassicRoundMediumRegular';
+    src: url('../fonts/ClassicRound-Medium-webfont.eot');
+    src: url('../fonts/ClassicRound-Medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ClassicRound-Medium-webfont.woff') format('woff'),
+         url('../fonts/ClassicRound-Medium-webfont.ttf') format('truetype'),
+         url('../fonts/ClassicRound-Medium-webfont.svg#ClassicRoundMediumRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 // Global Foundation Settings
 @import "settings";
 
@@ -67,12 +79,32 @@ $pattern-bg: url('../images/pattern.svg');
 	$yellow3: rgba(226, 148, 31, 1);
 
 html,body{
-	width: 100%;
-	height: 100%;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+}
+#container{
+	background-color: rgba(255,255,255,0.5);
+	padding-top: 20px;
+}
+h1,h2,h3,h4,h5,h6{
+	font-family: 'ClassicRoundMediumRegular';
+	font-weight: normal;
+	
+}
+h2.section-header{
+	text-align: center;
+	color: $red1;
+}
+.row{
+	h3{
+		text-transform: uppercase;
+		font-size: 1.2em;
+		color: $yellow2
+	}
 }
 body{
 	background-image: $pattern-bg;
-	background-size: 98px 123px;
+	background-color: #f1f1f1;
 }
 .top-page{
 	padding-top: 100px;
@@ -84,5 +116,6 @@ h1#coming-soon-logo{
 	background-repeat: no-repeat;
 	display: block;
 	height: 300px;
+	margin-bottom: 100px;
 
 }
