Added more content
added more content

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -80,7 +80,7 @@ $pattern-bg: url('../images/pattern.svg');
 
 html,body{
 	font-family: 'Roboto', sans-serif;
-	font-weight: 100;
+	font-weight: 100;color: #666;
 }
 #container{
 	background-color: rgba(255,255,255,0.5);
@@ -93,13 +93,13 @@ h1,h2,h3,h4,h5,h6{
 }
 h2.section-header{
 	text-align: center;
-	color: $red1;
+	color: $red3;
 }
 .row{
 	h3{
 		text-transform: uppercase;
 		font-size: 1.2em;
-		color: $yellow2
+		color: $yellow3
 	}
 }
 body{
