--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -4,7 +4,7 @@
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
-$base-font-size: 100% !default;
+$base-font-size: 110% !default;
 
 // $base-line-height is 24px while $base-font-size is 16px
 // $base-line-height: 150%;
@@ -30,8 +30,8 @@ $default-float: left;
 
 // $body-bg: #fff;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-// $body-font-weight: normal;
+$body-font-family: "Roboto"," Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-weight: 100;
 // $body-font-style: normal;
 
 // Font-smoothing
