--- a/sass/app.scss
+++ b/sass/app.scss
@@ -161,6 +161,9 @@ h1#coming-soon-logo{
 		letter-spacing: 1px;
 	}
 }
+#reg-form{
+	padding-bottom: 60px;
+}
 .role-logo{
 	margin-left: auto;
 	margin-right: auto;
