--- a/sass/app.scss
+++ b/sass/app.scss
@@ -133,8 +133,8 @@ h1#coming-soon-logo{
 	padding-bottom: 100px;
 	color: $red2;
 	font-size: 1.5em;
-	border-top: 2px solid #5A5B5B;
-	padding-top: 5px;
+	padding-top: 0px;
+	margin-top:-20px;
 	span{
 		color: #5A5B5B;
 	}
@@ -148,6 +148,9 @@ h1#coming-soon-logo{
 }
 #how-do-i-join{
 	background-color: rgba(255,255,255,0.8);
+	h3{
+		padding-top: 50px;
+	}
 }
 #participants{
 	margin-top: 100px;
@@ -189,5 +192,24 @@ li{
 	}
 }
 #registration{
+	padding-top: 60px;
+}
+#registration{
 	margin-top: 60px;
+}
+#sponsors-and-partners{
+	background:#fff;
+}
+#mechanics{
+	padding-top: 60px;
+	ul{
+		li{
+			display: block;
+		}
+	}
+	ol{
+		li{
+		margin-left: 20px;
+		}
+	}
 }
