--- a/sass/app.scss
+++ b/sass/app.scss
@@ -149,7 +149,7 @@ h1#coming-soon-logo{
 #how-do-i-join{
 	background-color: rgba(255,255,255,0.8);
 	h3{
-		padding-top: 50px;
+		padding-top: 20px;
 	}
 }
 #participants{
@@ -199,12 +199,22 @@ li{
 }
 #sponsors-and-partners{
 	background:#fff;
+	padding-top: 40px;
+	text-align: center;
 }
 #mechanics{
 	padding-top: 60px;
+	li{
+		font-weight: 300;
+		margin-bottom: 20px;
+	}
 	ul{
 		li{
 			display: block;
+			li{
+				margin-bottom: 0px;
+			}
+
 		}
 	}
 	ol{
