added aceler's fixes

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -257,12 +257,13 @@ padding-top: 20px;
 	background-size: cover;
 }
 #footer{
-	background: #222;
+	background: #393a3a;
 	color: $red1;
 	font-weight: 300;
 	height: 60px;
 	text-align: center;
 	padding: 20px 0px 20px;
+	font-family: $sansseriffont;
 	span{
 		color: #fff;
 	}
