added Ia's comments

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1203,7 +1203,7 @@ $body-font-weight: 100;
 
 // Background color for the top bar
 
-// $topbar-bg: #111 !default;
+$topbar-bg: rgba(250, 162, 34, 1) !default;
 
 // Height and margin
 
