--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4309,7 +4309,7 @@ form.custom .custom.disabled {
 /* line 67, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .contain-to-grid {
   width: 100%;
-  background: #111111;
+  background: #faa222;
 }
 /* line 71, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .contain-to-grid .top-bar {
@@ -4331,7 +4331,7 @@ form.custom .custom.disabled {
   height: 45px;
   line-height: 45px;
   position: relative;
-  background: #111111;
+  background: #faa222;
   margin-bottom: 1.875em;
 }
 /* line 92, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
@@ -4434,7 +4434,7 @@ form.custom .custom.disabled {
 }
 /* line 189, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .top-bar.expanded .title-area {
-  background: #111111;
+  background: #faa222;
 }
 /* line 192, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .top-bar.expanded .toggle-topbar a {
@@ -4467,8 +4467,8 @@ form.custom .custom.disabled {
 /* line 227, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .top-bar-section .divider,
 .top-bar-section [role="separator"] {
-  border-bottom: solid 1px #2b2b2b;
-  border-top: solid 1px black;
+  border-bottom: solid 1px #fbb754;
+  border-top: solid 1px #e48905;
   clear: both;
   height: 1px;
   width: 100%;
@@ -4486,7 +4486,7 @@ form.custom .custom.disabled {
 }
 /* line 246, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > a.hover {
-  background: #090909;
+  background: #fa9c13;
   color: white;
 }
 /* line 252, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
@@ -4524,7 +4524,7 @@ form.custom .custom.disabled {
 }
 /* line 281, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li.active > a {
-  background: #090909;
+  background: #fa9c13;
   color: white;
 }
 /* line 288, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
@@ -4610,7 +4610,7 @@ form.custom .custom.disabled {
 @media only screen and (min-width: 58.75em) {
   /* line 359, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
   .top-bar {
-    background: #111111;
+    background: #faa222;
     *zoom: 1;
     overflow: visible;
   }
@@ -4647,7 +4647,7 @@ form.custom .custom.disabled {
   }
   /* line 379, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
   .top-bar.expanded {
-    background: #111111;
+    background: #faa222;
   }
 
   /* line 382, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
@@ -4681,7 +4681,7 @@ form.custom .custom.disabled {
   .top-bar-section li a:not(.button) {
     padding: 0 15px;
     line-height: 45px;
-    background: #111111;
+    background: #faa222;
   }
   /* line 407, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
   .top-bar-section li a:not(.button).hover {
@@ -4735,12 +4735,12 @@ form.custom .custom.disabled {
     line-height: 1;
     white-space: nowrap;
     padding: 7px 15px;
-    background: #1e1e1e;
+    background: #fbac3b;
   }
   /* line 460, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li label {
     white-space: nowrap;
-    background: #1e1e1e;
+    background: #fbac3b;
   }
   /* line 466, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li .dropdown {
@@ -4751,15 +4751,15 @@ form.custom .custom.disabled {
   .top-bar-section > ul > .divider, .top-bar-section > ul > [role="separator"] {
     border-bottom: none;
     border-top: none;
-    border-right: solid 1px #2b2b2b;
-    border-left: solid 1px black;
+    border-right: solid 1px #fbb754;
+    border-left: solid 1px #e48905;
     clear: none;
     height: 45px;
     width: 0px;
   }
   /* line 484, ../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_top-bar.scss */
   .top-bar-section .has-form {
-    background: #111111;
+    background: #faa222;
     padding: 0 15px;
     height: 45px;
   }
@@ -6871,36 +6871,54 @@ h1#coming-soon-logo {
 }
 
 /* line 245, ../sass/app.scss */
+.top-bar {
+  font-family: "Roboto";
+  font-weight: 100;
+  text-transform: uppercase;
+}
+/* line 250, ../sass/app.scss */
+.top-bar li a {
+  font-weight: 100;
+  letter-spacing: 1px;
+}
+/* line 255, ../sass/app.scss */
+.top-bar a {
+  font-weight: 200;
+}
+
+/* line 259, ../sass/app.scss */
 #second-banner {
   background-image: url("../images/bg-5.jpg");
   background-position: center top;
   background-size: cover;
 }
 
-/* line 250, ../sass/app.scss */
+/* line 264, ../sass/app.scss */
 #third-banner {
   background-image: url("../images/bg-4.jpg");
   background-position: center top;
   background-size: cover;
 }
 
-/* line 255, ../sass/app.scss */
+/* line 269, ../sass/app.scss */
 #sixth-banner {
   background-image: url("../images/bg-6.jpg");
   background-size: cover;
 }
 
-/* line 259, ../sass/app.scss */
+/* line 273, ../sass/app.scss */
 #footer {
-  background: #393a3a;
+  background-image: url("../images/pattern.svg");
+  background-color: #faa222;
+  letter-spacing: 1px;
   color: #ed2124;
   font-weight: 300;
   height: 60px;
   text-align: center;
   padding: 20px 0px 20px;
-  font-family: "Roboto";
+  font-family: "ClassicRoundMediumRegular";
 }
-/* line 267, ../sass/app.scss */
+/* line 283, ../sass/app.scss */
 #footer span {
   color: #fff;
 }
